# kordova

./: .env.example  Cargo.toml  IMPLEMENTATION_REPORT.md  PROJECT.md  README.md  TRACKING.md  build.sh
docs/: API.md  installation-guide.md  user-guide.md
migrations/: 001_initial_schema.sql
monitoring/: DASHBOARD.md  PROJECT_STATUS.md  latest_status.txt  monitor.sh
plans/: developer-task-breakdown.md  project-execution-plan.md  project-timeline-milestones.md  risk-assessment.md  task-dependencies.md
src/: auth.rs  config.rs  database.rs  errors.rs  main.rs  middleware.rs  models.rs
src/handlers/: admin.rs  auth.rs  books.rs  circulation.rs  mod.rs  reports.rs  reservations.rs  users.rs
src/services/: auth_service.rs  book_service.rs  circulation_service.rs  mod.rs  reservation_service.rs  user_service.rs
tests/utils/: factories.rs  mod.rs  test_db.rs
