[package]
name = "library-management-system"
version = "0.1.0"
edition = "2021"
authors = ["Library Management Team"]
description = "Modern Library Management System built with Rust"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment & Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Redis for caching and sessions
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Rate limiting
lazy_static = "1.4"

# Email notifications
lettre = { version = "0.11", features = ["builder", "tokio1-rustls-tls"] }

# File handling
mime_guess = "2.0"

# Pagination
sea-query = "0.30"

[dev-dependencies]
tokio-test = "0.4"